# filevault

./: manage.py  pyproject.toml  readme.md
.devcontainer/: devcontainer.json
.docker/: docker-compose.local.yaml  dockerfile.local
filevault/: asgi.py  settings.py  urls.py  wsgi.py
filevault/apps/common/: models.py
filevault/apps/core/: admin.py  authentication.py  mixins.py  models.py  serializers.py  urls.py  views.py
filevault/apps/core/migrations/: 0001_initial.py  0002_alter_client_id_alter_file_id.py  0003_alter_file_mime_type_alter_file_name_alter_file_path_and_more.py
